# Yoshi_in_Fahrt

./: .gitignore  Makefile  README.md  TODO.txt  codingStyle.docx  delphi.xlsx  main.cpp  nico_test.txt
Langer Yoshi/test worlds/controllers/LangerYoshiBrain/: LangerYoshiBrain.sln  LangerYoshiBrain.vcxproj.filter
Langer Yoshi/test worlds/controllers/Main_Controller/: CMakeLists.txt  Main_Controller  Main_Controller.cpp  main.cpp  out.txt
Langer Yoshi/test worlds/controllers/Main_Controller/src/: Abstract_CommandHandler.h  Abstract_MotorController.h  Abstract_Motors.h  Abstract_NavigationStrategist.h  Abstract_RoadmapController.h  Abstract_SensorController.h  Abstract_WorldTranslator.h  Abstract_WorldmapController.h  Command.h  Log.cpp  Log.h  Mapdata.h  Mock_WorldTranslator.cpp  Mock_WorldTranslator.h  Mock_WorldmapController.cpp  Mock_WorldmapController.h  P3AT_Bumper.h  P3AT_CommandHandler.cpp  P3AT_CommandHandler.h  P3AT_MotorController.cpp  P3AT_MotorController.h  P3AT_Motors.cpp  P3AT_Motors.h  P3AT_NavigationStrategist.cpp  P3AT_NavigationStrategist.h  P3AT_RoadmapController.cpp  P3AT_RoadmapController.h  P3AT_SensorController.cpp  P3AT_SensorController.h  P3AT_Ultrasound.cpp  P3AT_Ultrasound.h  WayPoint.h  Worldmap.h  stdafx.h
Langer Yoshi/test worlds/controllers/Main_Controller3/: Main_Controller.cpp  Main_Controller.sln  Main_Controller.vcxproj.filter  Main_Controller.vcxproj.filters  out.h  out.in  out.txt
Langer Yoshi/test worlds/controllers/Main_Controller3/src/: Abstract_CommandHandler.h  Abstract_MotorController.h  Abstract_Motors.h  Abstract_RoadmapController.h  Log.cpp  P3AT_Bumper.cpp  P3AT_CommandHandler.h  P3AT_MotorController.cpp  P3AT_MotorController.h  P3AT_Motors.cpp  P3AT_Motors.h  P3AT_NavigationStrategist.cpp  P3AT_NavigationStrategist.h  P3AT_RoadmapController.cpp  P3AT_SensorController.cpp  P3AT_Ultrasound.h  WayPoint.h  stdafx.h
Langer Yoshi/test worlds/controllers/Yoshi/: Yoshi.cpp
Langer Yoshi/test worlds/controllers/msys64/mingw32/lib/: Controller.lib  car.lib  driver.lib
Langer Yoshi/test worlds/controllers/msys64/mingw64/include/: jconfig.h
Langer Yoshi/test worlds/controllers/my_controller/: my_controller.cpp
Langer Yoshi/test worlds/protos/: Yoshi.proto  Yoshi.wbo
Langer Yoshi/test worlds/world files/: .Langer Yoshi - Testworld.wbproj  Langer Yoshi - Testworld.wbt
Statusberichte/: 1_Statusbericht_01_04_2019.docx  3_Statusbericht_30_04_2019.docx  4_Statusbericht_07_05_2019.docx
(+3 files in other folders)
